--- a/files/display_2_default/styles.css
+++ b/files/display_2_default/styles.css
@@ -2,8 +2,8 @@
   margin:0px;
   background-image:none;
   position:relative;
-  left:-170px;
-  width:692px;
+  left:-1px;
+  width:1241px;
   margin-left:auto;
   margin-right:auto;
   text-align:left;
@@ -16,7 +16,47 @@
   position:absolute;
   z-index:0;
 }
-#u52_div {
+#u36_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1241px;
+  height:2106px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 1);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(121, 121, 121, 1);
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u36 {
+  border-width:0px;
+  position:absolute;
+  left:1px;
+  top:0px;
+  width:1241px;
+  height:2106px;
+  display:flex;
+}
+#u36 .text {
+  position:absolute;
+  align-self:center;
+  padding:2px 2px 2px 2px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u36_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+  visibility:hidden;
+}
+#u37_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -34,7 +74,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u52 {
+#u37 {
   border-width:0px;
   position:absolute;
   left:424px;
@@ -43,20 +83,20 @@
   height:448px;
   display:flex;
 }
-#u52 .text {
+#u37 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u52_text {
+#u37_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u53_div {
+#u38_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -71,7 +111,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u53 {
+#u38 {
   border-width:0px;
   position:absolute;
   left:566px;
@@ -80,19 +120,19 @@
   height:16px;
   display:flex;
 }
-#u53 .text {
+#u38 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u53_text {
+#u38_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u54_div {
+#u39_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -107,7 +147,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u54 {
+#u39 {
   border-width:0px;
   position:absolute;
   left:170px;
@@ -116,19 +156,19 @@
   height:40px;
   display:flex;
 }
-#u54 .text {
+#u39 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u54_text {
+#u39_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
 }
-#u55_img {
+#u40_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -136,7 +176,7 @@
   width:488px;
   height:1037px;
 }
-#u55 {
+#u40 {
   border-width:0px;
   position:absolute;
   left:374px;
@@ -145,20 +185,20 @@
   height:1037px;
   display:flex;
 }
-#u55 .text {
+#u40 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u55_text {
+#u40_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u56_div {
+#u41_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -179,7 +219,7 @@
   color:#FFFFFF;
   text-align:center;
 }
-#u56 {
+#u41 {
   border-width:0px;
   position:absolute;
   left:468px;
@@ -194,19 +234,19 @@
   color:#FFFFFF;
   text-align:center;
 }
-#u56 .text {
+#u41 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u56_text {
+#u41_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
 }
-#u57_img {
+#u42_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -214,7 +254,7 @@
   width:233px;
   height:233px;
 }
-#u57 {
+#u42 {
   border-width:0px;
   position:absolute;
   left:502px;
@@ -223,20 +263,20 @@
   height:233px;
   display:flex;
 }
-#u57 .text {
+#u42 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u57_text {
+#u42_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u58_div {
+#u43_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -251,7 +291,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u58 {
+#u43 {
   border-width:0px;
   position:absolute;
   left:170px;
@@ -260,19 +300,19 @@
   height:40px;
   display:flex;
 }
-#u58 .text {
+#u43 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u58_text {
+#u43_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
 }
-#u59 {
+#u44 {
   border-width:0px;
   position:absolute;
   left:498px;
@@ -280,7 +320,7 @@
   width:240px;
   height:240px;
 }
-#u59_state0 {
+#u44_state0 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -298,7 +338,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u59_state0_content {
+#u44_state0_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -306,7 +346,7 @@
   width:1px;
   height:1px;
 }
-#u60_img {
+#u45_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -314,7 +354,7 @@
   width:240px;
   height:240px;
 }
-#u60 {
+#u45 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -323,77 +363,20 @@
   height:240px;
   display:flex;
 }
-#u60 .text {
+#u45 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u60_text {
+#u45_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u59_state1 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:240px;
-  height:240px;
-  -ms-overflow-x:hidden;
-  overflow-x:hidden;
-  -ms-overflow-y:hidden;
-  overflow-y:hidden;
-  background-image:none;
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  visibility:hidden;
-}
-#u59_state1_content {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:1px;
-  height:1px;
-}
-#u61_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:240px;
-  height:240px;
-}
-#u61 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:240px;
-  height:240px;
-  display:flex;
-}
-#u61 .text {
-  position:absolute;
-  align-self:center;
-  padding:2px 2px 2px 2px;
-  box-sizing:border-box;
-  width:100%;
-}
-#u61_text {
-  border-width:0px;
-  word-wrap:break-word;
-  text-transform:none;
-  visibility:hidden;
-}
-#u59_state2 {
+#u44_state1 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -412,7 +395,7 @@
   box-shadow:none;
   visibility:hidden;
 }
-#u59_state2_content {
+#u44_state1_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -420,7 +403,7 @@
   width:1px;
   height:1px;
 }
-#u62_img {
+#u46_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -428,7 +411,7 @@
   width:240px;
   height:240px;
 }
-#u62 {
+#u46 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -437,20 +420,77 @@
   height:240px;
   display:flex;
 }
-#u62 .text {
+#u46 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u62_text {
+#u46_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u63_div {
+#u44_state2 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:240px;
+  height:240px;
+  -ms-overflow-x:hidden;
+  overflow-x:hidden;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
+  background-image:none;
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  visibility:hidden;
+}
+#u44_state2_content {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u47_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:240px;
+  height:240px;
+}
+#u47 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:240px;
+  height:240px;
+  display:flex;
+}
+#u47 .text {
+  position:absolute;
+  align-self:center;
+  padding:2px 2px 2px 2px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u47_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+  visibility:hidden;
+}
+#u48_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -465,7 +505,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u63 {
+#u48 {
   border-width:0px;
   position:absolute;
   left:544px;
@@ -474,19 +514,19 @@
   height:40px;
   display:flex;
 }
-#u63 .text {
+#u48 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u63_text {
+#u48_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
 }
-#u64_div {
+#u49_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -501,7 +541,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u64 {
+#u49 {
   border-width:0px;
   position:absolute;
   left:374px;
@@ -510,19 +550,19 @@
   height:40px;
   display:flex;
 }
-#u64 .text {
+#u49 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u64_text {
+#u49_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
 }
-#u65_div {
+#u50_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -537,7 +577,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u65 {
+#u50 {
   border-width:0px;
   position:absolute;
   left:170px;
@@ -546,19 +586,19 @@
   height:40px;
   display:flex;
 }
-#u65 .text {
+#u50 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u65_text {
+#u50_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
 }
-#u66 {
+#u51 {
   border-width:0px;
   position:absolute;
   left:563px;
@@ -566,7 +606,7 @@
   width:110px;
   height:21px;
 }
-#u66_state0 {
+#u51_state0 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -584,7 +624,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u66_state0_content {
+#u51_state0_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -592,7 +632,7 @@
   width:1px;
   height:1px;
 }
-#u66_state1 {
+#u51_state1 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -611,7 +651,7 @@
   box-shadow:none;
   visibility:hidden;
 }
-#u66_state1_content {
+#u51_state1_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -619,7 +659,7 @@
   width:1px;
   height:1px;
 }
-#u67_div {
+#u52_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -640,7 +680,7 @@
   color:#F2F2F2;
   text-align:center;
 }
-#u67 {
+#u52 {
   border-width:0px;
   position:absolute;
   left:15px;
@@ -655,19 +695,19 @@
   color:#F2F2F2;
   text-align:center;
 }
-#u67 .text {
+#u52 .text {
   position:absolute;
   align-self:center;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u67_text {
+#u52_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
 }
-#u66_state2 {
+#u51_state2 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -686,7 +726,7 @@
   box-shadow:none;
   visibility:hidden;
 }
-#u66_state2_content {
+#u51_state2_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -694,7 +734,7 @@
   width:1px;
   height:1px;
 }
-#u68_div {
+#u53_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -715,7 +755,7 @@
   color:#F2F2F2;
   text-align:center;
 }
-#u68 {
+#u53 {
   border-width:0px;
   position:absolute;
   left:15px;
@@ -730,19 +770,19 @@
   color:#F2F2F2;
   text-align:center;
 }
-#u68 .text {
+#u53 .text {
   position:absolute;
   align-self:center;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u68_text {
+#u53_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
 }
-#u66_state3 {
+#u51_state3 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -761,7 +801,7 @@
   box-shadow:none;
   visibility:hidden;
 }
-#u66_state3_content {
+#u51_state3_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -769,7 +809,7 @@
   width:1px;
   height:1px;
 }
-#u69_div {
+#u54_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -790,7 +830,7 @@
   color:#F2F2F2;
   text-align:center;
 }
-#u69 {
+#u54 {
   border-width:0px;
   position:absolute;
   left:-5px;
@@ -805,19 +845,19 @@
   color:#F2F2F2;
   text-align:center;
 }
-#u69 .text {
+#u54 .text {
   position:absolute;
   align-self:center;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u69_text {
+#u54_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
 }
-#u70_div {
+#u55_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -832,7 +872,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u70 {
+#u55 {
   border-width:0px;
   position:absolute;
   left:722px;
@@ -841,19 +881,19 @@
   height:40px;
   display:flex;
 }
-#u70 .text {
+#u55 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u70_text {
+#u55_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
 }
-#u71_div {
+#u56_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -868,7 +908,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u71 {
+#u56 {
   border-width:0px;
   position:absolute;
   left:544px;
@@ -877,24 +917,24 @@
   height:40px;
   display:flex;
 }
-#u71 .text {
+#u56 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u71_text {
+#u56_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
 }
-#u72 {
+#u57 {
   position:absolute;
   left:596px;
   top:553px;
 }
-#u72_state0 {
+#u57_state0 {
   position:relative;
   left:0px;
   top:0px;
@@ -907,7 +947,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u72_state0_content {
+#u57_state0_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -915,7 +955,7 @@
   width:1px;
   height:1px;
 }
-#u72_state1 {
+#u57_state1 {
   position:relative;
   left:0px;
   top:0px;
@@ -929,7 +969,7 @@
   box-shadow:none;
   visibility:hidden;
 }
-#u72_state1_content {
+#u57_state1_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -937,7 +977,7 @@
   width:1px;
   height:1px;
 }
-#u73_img {
+#u58_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -945,7 +985,7 @@
   width:80px;
   height:80px;
 }
-#u73 {
+#u58 {
   border-width:0px;
   position:absolute;
   left:-18px;
@@ -958,20 +998,20 @@
   -ms-transform:rotate(180deg);
   transform:rotate(180deg);
 }
-#u73 .text {
+#u58 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u73_text {
+#u58_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u72_state2 {
+#u57_state2 {
   position:relative;
   left:0px;
   top:0px;
@@ -985,7 +1025,7 @@
   box-shadow:none;
   visibility:hidden;
 }
-#u72_state2_content {
+#u57_state2_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -993,7 +1033,7 @@
   width:1px;
   height:1px;
 }
-#u74_img {
+#u59_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1001,7 +1041,7 @@
   width:80px;
   height:80px;
 }
-#u74 {
+#u59 {
   border-width:0px;
   position:absolute;
   left:-18px;
@@ -1010,20 +1050,20 @@
   height:80px;
   display:flex;
 }
-#u74 .text {
+#u59 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u74_text {
+#u59_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u72_state3 {
+#u57_state3 {
   position:relative;
   left:0px;
   top:0px;
@@ -1037,7 +1077,7 @@
   box-shadow:none;
   visibility:hidden;
 }
-#u72_state3_content {
+#u57_state3_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1045,7 +1085,7 @@
   width:1px;
   height:1px;
 }
-#u75_img {
+#u60_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1053,7 +1093,7 @@
   width:30px;
   height:30px;
 }
-#u75 {
+#u60 {
   border-width:0px;
   position:absolute;
   left:7px;
@@ -1062,14 +1102,14 @@
   height:30px;
   display:flex;
 }
-#u75 .text {
+#u60 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u75_text {
+#u60_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
